# django-react-boilerplate

./: README.md  justfile
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/authentication/: admin.py  apps.py  models.py  pipeline.py  schema.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/backend/: loguru_logging.py  settings.py  urls.py
backend/bruno-client/: bruno.json
backend/bruno-client/Auth/: Login.bru  Logout.bru  Register.bru
backend/bruno-client/User/: Me.bru  folder.bru
backend/bruno-client/environments/: Local.bru
backend/docs/: utils.py  views.py
backend/fixtures/: setup.json
backend/templates/: elements.html
frontend/: .eslintrc.js  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  RootComponent.tsx  index.tsx
frontend/src/api/: auth.ts  users.ts
frontend/src/components/: AppMobileHeader.tsx  AppSidebar.tsx  ThemeToggle.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: DashboardPage.tsx  ExamplePage.tsx  LoginPage.tsx  LogoutPage.tsx  NotFoundPage.tsx  ProjectsPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  LogoutPage.tsx
frontend/src/pages/dashboard/: HomePage.tsx  ProfilePage.tsx  ProjectsPage.tsx
frontend/src/providers/: RouteGuard.tsx
frontend/src/resources/: routes-constants.ts
frontend/src/store/: auth.ts  ui.ts  users.ts
frontend/src/types/: app.ts  auth.ts  users.ts
