# Ruf config: https://docs.astral.sh/ruff/configuration/
[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = []
license = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
social-auth-app-django = "^5.4.1"
django-oauth-toolkit = "^3.0.1"
drf-social-oauth2 = "^3.1.0"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.10"
drf-spectacular = "^0.27.2"
django-unfold = "^0.41.0"
django-import-export = "^4.3.1"
django-simple-history = "^3.7.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
indent-width = 4
exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
# Currently the default, but want to be explicit
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
